src/objects/Business_Context__c.object
<CustomObject>
    <fields>
        <fullName>Business_Context__c</fullName>
        <description>The context for which this Business Process is associated to. These values must be aligned with those defined within the Business Context Custom Metadata (Business_Context__mdt).

                The dependent field is &apos;Sub Context&apos;. The Sub Context values of &apos;E&amp;F Standard&apos; and &apos;E&amp;F India&apos; should be made dependent on the Business Context value of &apos;E&amp;F&apos;.</description>
        <label>Business Context</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>E&amp;F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAP_Sales_Area_Code__c</fullName>
        <description>To be entered manually at record creation by an administrator:
                *   Context = 2 --&gt; E&amp;F standard (80EF)
                *   Context = 3 --&gt; E&amp;F India (80IN)
                *   Context = 4 --&gt; E&amp;F Venezuela (VE01)
                *   Context = 5 --&gt; E&amp;F Indonesia (ID02), only for authorities
                *   Context = 6 --&gt; E&amp;F Canada (CA01/01/54), only for authorities</description>
        <label>SAP Sales Area Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Context__c</fullName>
        <description>Defines a Sub-Context for the Business Process. No custom metadat will be used because picklist global value set is not available in custom metadata</description>
        <label>Sub Context</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Business_Context__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>E&amp;F Standard</fullName>
                </value>
                <value>
                    <fullName>E&amp;F India</fullName>
                </value>
                <value>
                    <fullName>E&amp;F Venezuela</fullName>
                </value>
                <value>
                    <fullName>E&amp;F Indonesia</fullName>
                </value>
                <value>
                    <fullName>E&amp;F Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Business Context</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business_Context__c</columns>
        <columns>Sub_Context__c</columns>
        <columns>SAP_Sales_Area_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Business Context Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Context</pluralLabel>
    <recordTypes>
        <fullName>Master</fullName>
        <active>true</active>
        <label>Master</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>